# energy-meter

./: Cargo.toml
docs/: README.md  buttons.md  display.md  firmware-map.md  hardware.md  i2c-bus.md  pinout.md
src/: board.rs  i2c.rs  lib.rs  power.rs  touch.rs  ui.rs
src/display/: framebuffer.rs  mod.rs  qspi_bus.rs
