[package]
edition      = "2024"
name         = "energy-meter"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "energy-meter"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["defmt", "embassy", "esp32s3"] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32s3"] }

embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-futures = "0.1.1"
esp-backtrace = { version = "0.19.0", features = [
  "defmt",
  "esp32s3",
  "panic-handler",
] }
esp-println = { version = "0.17.0", features = ["defmt-espflash", "esp32s3"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
async-button = "0.2.0"
embedded-graphics = "0.8.2"
display-driver-co5300 = "0.1.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
display-driver = "0.1.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
